[tool.poetry]
name = "backpack-api"
version = "0.0.3"
description = "Backpack REST API python implementation"
authors = ["Web3 Enjoyer"]
readme = "README.md"
packages = [{include = "backpack"}]

[project.urls]
homepage = "https://github.com/pypdfium2-team/pypdfium2"
documentation = "https://pypdfium2.readthedocs.io/"
changelog = "https://pypdfium2.readthedocs.io/en/stable/changelog.html"

[tool.poetry.dependencies]
python = "^3.9"
ed25519 = "1.5"
PyNaCl = "1.5.0"
aiohttp = "3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"