[tool.poetry]
name = "backpack-api"
version = "0.0.15"
description = "Backpack REST API python implementation"
authors = ["Web3 Enjoyer"]
readme = "README.md"
packages = [{include = "backpack"}]

[project.urls]
homepage = "https://github.com/pypdfium2-team/pypdfium2"
documentation = "https://pypdfium2.readthedocs.io/"
changelog = "https://pypdfium2.readthedocs.io/en/stable/changelog.html"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.3"
aiohttp-proxy = "0.1.2"
PyNaCl = "1.5.0"
cryptography = "42.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"