[metadata]
url = https://github.com/MsLolita/pybackpack
author = Web3 Enjoyer
author_email = AuthorEmail@gmail.com
description = Backpack library for Python
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/MsLolita/pybackpack
    Tracker = https://github.com/MsLolita/pybackpack/issues
    Documentation = https://pybackpack.readthedocs.io/en/latest